# finadvisor-serverless

./: .gitignore  Dockerfile  README.md  compare_trained_and_untrained_model_results.ipynb  finetune_flan_t5.ipynb  load_test.html  pyproject.toml  ui.html
aws/: lambda_handler.py  requirements.txt
aws/package/model/checkpoint-2000/: adapter_model.safetensors  optimizer.pt  scheduler.pt
data_gen/: baseline.py  generate_synthetic.py  generate_transactions.py  make_instructions.py  pipeline.py  profiles.yaml  summaries.py
data_gen/configs/: generate.yaml  instructions.yaml
lambda_package/: lambda_function.py  test.py  test_lambda.py
lambda_package/model/: adapter_config.json
lambda_package/model/checkpoint-2000/: rng_state.pth  trainer_state.json
lambda_package/model/checkpoint-2022/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
src/: baseline.py  evaluate.py  evaluate_params.py  train.py
