[project]
name = "finwise-llm"
version = "0.1.0"
description = "Serverless AI-powered personal finance advisor (AWS Lambda + LLM)."
authors = [{ name = "Zora Liu" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["services", "model", "data_gen"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"