[tool.poetry]
name = "finwise-llm"
version = "0.1.0"
description = "Serverless AI-powered personal finance advisor (AWS Lambda + LLM)."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
faker = "^25.0.0"
pyyaml = "^6.0.3"
pyspark = "^4.0.1"

[tool.setuptools.packages.find]
where = ["services", "model", "data_gen"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"